[package]
name = "ctools"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
base64 = "0.21"
block-modes = "0.8"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
evalexpr = "8.0"
hex = "0.4"
md5 = "0.7"
qrcode = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
sysinfo = "0.28"
trust-dns-resolver = "0.22"
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2.3"
serde_json = "1.0"